# tryCpp

tryCode/tryCpp/: CMakeLists.txt  main.cpp
tryCode/tryCpp/wheels/: CMakeLists.txt  wheels.h
tryCode/tryCpp/wheels/include/: a.h
tryCode/tryCpp/wheels/src/: a.cpp
